move memory-manipulation to environments

--- a/projects/abstraction/memory/manipulation/code/CMakeLists.txt
+++ b/projects/abstraction/memory/manipulation/code/CMakeLists.txt
@@ -3,9 +3,17 @@ create_abstraction_targets(abstraction-memory-manipulation)
 if("${ENVIRONMENT}" STREQUAL "freestanding")
     add_project("freestanding")
     abstraction_add_sources(freestanding-memory-manipulation)
+    abstraction_include_interface_library(freestanding-memory-manipulation)
+    abstraction_include_definition(ABSTRACTION_MEMORY_MANIPULATION="freestanding/memory/manipulation.h")
 elseif("${ENVIRONMENT}" STREQUAL "efi")
     add_project("freestanding")
     abstraction_add_sources(freestanding-memory-manipulation)
+    abstraction_include_interface_library(freestanding-memory-manipulation)
+    abstraction_include_definition(ABSTRACTION_MEMORY_MANIPULATION="freestanding/memory/manipulation.h")
 elseif("${ENVIRONMENT}" STREQUAL "posix")
+    abstraction_include_interface_library(posix-memory-manipulation)
+    abstraction_include_definition(ABSTRACTION_MEMORY_MANIPULATION="posix/memory/manipulation.h")
     # Posix should link with a stdlib that contains the right implementations
+else()
+    message(FATAL_ERROR "no memory manipulation implementation defined")
 endif()
