--- a/projects/abstraction/memory/virtual/code/CMakeLists.txt
+++ b/projects/abstraction/memory/virtual/code/CMakeLists.txt
@@ -5,6 +5,7 @@ if("${ARCHITECTURE}" STREQUAL "x86")
     add_project("x86/memory/virtual")
     abstraction_add_sources(x86-memory-virtual)
     abstraction_include_interface_library(x86-memory)
+    abstraction_add_sources(x86-memory)
     abstraction_include_definition(ABSTRACTION_VIRTUAL_MEMORY_CONVERTER="x86/memory/definitions.h")
 else()
     message(FATAL_ERROR "Could not find matching lib for ${PROJECT_NAME}")
