--- a/projects/abstraction/memory/virtual/code/CMakeLists.txt
+++ b/projects/abstraction/memory/virtual/code/CMakeLists.txt
@@ -6,7 +6,16 @@ if("${ARCHITECTURE}" STREQUAL "x86")
     abstraction_add_sources(x86-memory-virtual)
     abstraction_include_interface_library(x86-memory)
     abstraction_add_sources(x86-memory)
-    abstraction_include_definition(ABSTRACTION_VIRTUAL_MEMORY_CONVERTER="x86/memory/definitions.h")
+    set(ABSTRACTION_MEMORY_VIRTUAL_INCLUDE "x86/memory/definitions.h")
 else()
     message(FATAL_ERROR "Could not find matching lib for ${PROJECT_NAME}")
 endif()
+
+set(INCLUDE_LOCATION "include/abstraction/memory/virtual")
+configure_file(
+    ${CMAKE_CURRENT_SOURCE_DIR}/${INCLUDE_LOCATION}/converter.in.h
+    "${INCLUDE_LOCATION}/converter.h"
+    @ONLY
+)
+
+abstraction_include_interface_location("${CMAKE_CURRENT_BINARY_DIR}/include")
