--- a/projects/abstraction/text/converter/code/CMakeLists.txt
+++ b/projects/abstraction/text/converter/code/CMakeLists.txt
@@ -3,4 +3,8 @@ create_abstraction_targets(abstraction-text-converter)
 add_project("shared")
 
 abstraction_add_sources(shared-text-converter)
-abstraction_include_interface_library(shared-text-converter)
+
+if(${FLOAT_OPERATIONS})
+    abstraction_add_sources(shared-text-converter-float)
+else()
+endif()
