--- a/projects/abstraction/interrupts/code/CMakeLists.txt
+++ b/projects/abstraction/interrupts/code/CMakeLists.txt
@@ -1,13 +1,13 @@
 create_abstraction_targets(abstraction-interrupts)
 
-if("${ARCHITECTURE}" STREQUAL "x86")
+if(${ARCHITECTURE} STREQUAL "X86")
     add_project("x86")
     abstraction_add_sources(x86-idt)
-    if("${ENVIRONMENT}" STREQUAL "freestanding")
+    if(${ENVIRONMENT} STREQUAL "FREESTANDING")
         abstraction_add_sources(x86-idt-real)
-    elseif("${ENVIRONMENT}" STREQUAL "efi")
+    elseif(${ENVIRONMENT} STREQUAL "EFI")
         abstraction_add_sources(x86-idt-real)
-    elseif("${ENVIRONMENT}" STREQUAL "posix")
+    elseif(${ENVIRONMENT} STREQUAL "POSIX")
         abstraction_add_sources(x86-idt-mock)
     else()
         message(FATAL_ERROR "Could not match ENVIRONMENT variable")
