--- a/projects/shared/code/text/CMakeLists.txt
+++ b/projects/shared/code/text/CMakeLists.txt
@@ -1,8 +1,10 @@
 project(shared-text LANGUAGES C ASM)
-add_library(${PROJECT_NAME} OBJECT "src/converter.c" "src/parser.c")
+add_library(${PROJECT_NAME} OBJECT "src/parser.c")
 
 add_includes_for_sublibrary()
 
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-manipulation-i)
+
+add_subdirectory(converter)
