--- a/projects/os-loader/code/CMakeLists.txt
+++ b/projects/os-loader/code/CMakeLists.txt
@@ -26,6 +26,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-manipulation)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-physical)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-virtual)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-log)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-text-converter)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-text)
