--- a/projects/x86/code/fault/print/CMakeLists.txt
+++ b/projects/x86/code/fault/print/CMakeLists.txt
@@ -8,6 +8,7 @@ if("${UNIT_TEST_BUILD}")
 endif()
 
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-manipulation-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-text-converter-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-log-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-i)
