--- a/projects/efi/code/memory/CMakeLists.txt
+++ b/projects/efi/code/memory/CMakeLists.txt
@@ -5,6 +5,7 @@ add_includes_for_sublibrary()
 
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-physical-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-log-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-text-converter-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-manipulation-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-i)
