--- a/projects/posix/code/file/CMakeLists.txt
+++ b/projects/posix/code/file/CMakeLists.txt
@@ -6,5 +6,6 @@ add_includes_for_sublibrary()
 target_link_libraries(${PROJECT_NAME} PRIVATE posix-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-manipulation-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-text-converter-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-i)
