--- a/projects/x86/memory/physical/code/CMakeLists.txt
+++ b/projects/x86/memory/physical/code/CMakeLists.txt
@@ -12,6 +12,7 @@ if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
     add_project("abstraction/memory/manipulation")
     add_project("abstraction/log")
     add_project("abstraction/interrupts")
+    add_project("abstraction/text/converter")
     include("${REPO_PROJECTS}/print-configuration.cmake")
 endif()
 
