--- a/projects/x86/memory/virtual/code/CMakeLists.txt
+++ b/projects/x86/memory/virtual/code/CMakeLists.txt
@@ -10,6 +10,7 @@ if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
     add_project("abstraction/memory/virtual")
     add_project("abstraction/memory/physical")
     add_project("abstraction/memory/manipulation")
+    add_project("abstraction/text/converter")
     add_project("abstraction/log")
     include("${REPO_PROJECTS}/print-configuration.cmake")
 endif()
