tests building again

--- a/projects/x86/memory/physical/code/tests/CMakeLists.txt
+++ b/projects/x86/memory/physical/code/tests/CMakeLists.txt
@@ -9,6 +9,7 @@ target_include_directories(
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-manipulation-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-interrupts)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-log)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-text-converter)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE efi-to-kernel-i)
 
