--- a/projects/x86/code/fault/print/test/CMakeLists.txt
+++ b/projects/x86/code/fault/print/test/CMakeLists.txt
@@ -8,4 +8,5 @@ target_link_libraries(${PROJECT_NAME} PRIVATE shared-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-manipulation-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-log-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-text-converter-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-interrupts)
