--- a/projects/x86/memory/physical/code/CMakeLists.txt
+++ b/projects/x86/memory/physical/code/CMakeLists.txt
@@ -20,7 +20,7 @@ add_library(${PROJECT_NAME} OBJECT "src/physical.c")
 
 add_includes_for_sublibrary()
 
-if("${UNIT_TEST_BUILD}")
+if(${BUILD} STREQUAL "UNIT_TEST")
     add_subdirectory(tests)
 endif()
 
