--- a/projects/efi/code/globals/CMakeLists.txt
+++ b/projects/efi/code/globals/CMakeLists.txt
@@ -5,4 +5,6 @@ add_includes_for_sublibrary()
 
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-i)
 
+target_link_libraries(${PROJECT_NAME} PRIVATE efi-to-kernel-i)
+
 target_link_libraries(${PROJECT_NAME} PRIVATE efi-i)
