--- a/projects/freestanding/code/memory/manipulation/CMakeLists.txt
+++ b/projects/freestanding/code/memory/manipulation/CMakeLists.txt
@@ -4,3 +4,5 @@ add_library(${PROJECT_NAME} OBJECT "src/manipulation.c")
 add_includes_for_sublibrary()
 
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-i)
+
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-manipulation-i)
