--- a/projects/x86/code/configuration/CMakeLists.txt
+++ b/projects/x86/code/configuration/CMakeLists.txt
@@ -1,5 +1,5 @@
 project(x86-configuration LANGUAGES C ASM)
-add_library(${PROJECT_NAME} OBJECT "src/features.c" "src/cpu2.c")
+add_library(${PROJECT_NAME} OBJECT "src/features.c" "src/cpu.c")
 
 add_includes_for_sublibrary()
 
