--- a/projects/os-loader/code/CMakeLists.txt
+++ b/projects/os-loader/code/CMakeLists.txt
@@ -18,6 +18,7 @@ add_executable(
     ${PROJECT_NAME}
     "src/main.c"
     "src/data-reading.c"
+    "src/data-reading-old.c"
     "src/memory/boot-functions.c"
 )
 
