--- a/projects/shared/code/memory/allocator/CMakeLists.txt
+++ b/projects/shared/code/memory/allocator/CMakeLists.txt
@@ -11,5 +11,6 @@ add_library(
 add_includes_for_sublibrary()
 
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-manipulation-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-jmp-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-i)
