--- a/projects/x86/code/CMakeLists.txt
+++ b/projects/x86/code/CMakeLists.txt
@@ -8,6 +8,7 @@ if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
     add_project("shared")
     add_project("abstraction/memory/manipulation")
     add_project("abstraction/log")
+    add_project("abstraction/jmp")
     add_project("abstraction/interrupts")
     add_project("abstraction/text/converter")
     include("${REPO_PROJECTS}/print-configuration.cmake")
@@ -18,6 +19,7 @@ add_subdirectory(memory)
 add_subdirectory(fault)
 add_subdirectory(idt)
 add_subdirectory(gdt)
+add_subdirectory(jmp)
 
 if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
     fetch_and_write_project_targets()
