--- a/projects/kernel/code/CMakeLists.txt
+++ b/projects/kernel/code/CMakeLists.txt
@@ -15,6 +15,7 @@ include("${REPO_PROJECTS}/setup.cmake")
 add_project("shared")
 add_project("efi-to-kernel")
 add_project("freestanding")
+add_project("abstraction/jmp")
 add_project("abstraction/log")
 add_project("abstraction/text/converter")
 add_project("abstraction/interrupts")
@@ -45,6 +46,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE efi-to-kernel-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-virtual-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-physical-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-interrupts)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-jmp)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-log)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-text-converter)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-management)
