--- a/projects/os-loader/code/CMakeLists.txt
+++ b/projects/os-loader/code/CMakeLists.txt
@@ -11,12 +11,14 @@ add_project("abstraction/memory/manipulation")
 add_project("abstraction/memory/physical")
 add_project("abstraction/memory/virtual")
 add_project("abstraction/log")
+add_project("abstraction/jmp")
 add_project("abstraction/text/converter")
 include("${REPO_PROJECTS}/print-configuration.cmake")
 
 add_executable(${PROJECT_NAME} "src/main.c" "src/data-reading.c" "src/memory.c")
 
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-efi)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-jmp)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-manipulation)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-physical)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-virtual)
@@ -26,6 +28,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-text-converter)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-text)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-memory-converter)
+target_link_libraries(${PROJECT_NAME} PRIVATE shared-memory-allocator)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE efi-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE efi-error)
