--- a/projects/shared/code/CMakeLists.txt
+++ b/projects/shared/code/CMakeLists.txt
@@ -10,6 +10,7 @@ if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
     add_project("abstraction/memory/virtual")
     add_project("abstraction/memory/physical")
     add_project("abstraction/log")
+    add_project("abstraction/jmp")
     add_project("abstraction/text/converter")
     add_project("efi-to-kernel")
 endif()
