--- a/projects/shared/code/dynamic-array/CMakeLists.txt
+++ b/projects/shared/code/dynamic-array/CMakeLists.txt
@@ -5,5 +5,6 @@ add_library(${PROJECT_NAME} OBJECT "src/dynamic-array.c")
 add_includes_for_sublibrary()
 
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-manipulation-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-jmp-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-i)
