--- a/projects/x86/code/idt/mock/CMakeLists.txt
+++ b/projects/x86/code/idt/mock/CMakeLists.txt
@@ -4,6 +4,7 @@ add_library(${PROJECT_NAME} OBJECT "src/idt.c")
 add_includes_for_sublibrary()
 
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-manipulation-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-jmp-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE x86-i)
 
