getting back on track

--- a/projects/efi/code/CMakeLists.txt
+++ b/projects/efi/code/CMakeLists.txt
@@ -11,6 +11,7 @@ if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
     add_project("efi-to-kernel")
     add_project("abstraction/memory/manipulation")
     add_project("abstraction/memory/physical")
+    add_project("abstraction/memory/virtual")
     add_project("abstraction/log")
     add_project("abstraction/jmp")
     add_project("abstraction/text/converter")
