--- a/projects/posix/code/file/CMakeLists.txt
+++ b/projects/posix/code/file/CMakeLists.txt
@@ -7,5 +7,6 @@ target_link_libraries(${PROJECT_NAME} PRIVATE posix-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-manipulation-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-text-converter-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-jmp-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-i)
