--- a/projects/efi/code/memory/CMakeLists.txt
+++ b/projects/efi/code/memory/CMakeLists.txt
@@ -1,9 +1,10 @@
 project(efi-memory LANGUAGES C ASM)
-add_library(${PROJECT_NAME} OBJECT "src/physical.c")
+add_library(${PROJECT_NAME} OBJECT "src/virtual.c" "src/physical.c")
 
 add_includes_for_sublibrary()
 
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-physical-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-virtual-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-log-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-jmp-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-text-converter-i)
