--- a/projects/os-loader/code/CMakeLists.txt
+++ b/projects/os-loader/code/CMakeLists.txt
@@ -27,6 +27,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-text-converter)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-text)
+target_link_libraries(${PROJECT_NAME} PRIVATE shared-maths)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-memory-converter)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-memory-allocator)
 
