--- a/projects/os-loader/code/CMakeLists.txt
+++ b/projects/os-loader/code/CMakeLists.txt
@@ -5,6 +5,7 @@ project(os-loader LANGUAGES C ASM)
 include("${REPO_PROJECTS}/setup.cmake")
 add_project("shared")
 add_project("efi")
+add_project("efi/uefi")
 add_project("efi-to-kernel")
 add_project("abstraction/efi")
 add_project("abstraction/memory/manipulation")
@@ -28,6 +29,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-text-converter)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-text)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-maths)
+target_link_libraries(${PROJECT_NAME} PRIVATE shared-uuid)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-memory-converter)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-memory-allocator)
 
@@ -35,6 +37,8 @@ target_link_libraries(${PROJECT_NAME} PRIVATE efi-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE efi-error)
 target_link_libraries(${PROJECT_NAME} PRIVATE efi-acpi)
 target_link_libraries(${PROJECT_NAME} PRIVATE efi-globals)
+
+target_link_libraries(${PROJECT_NAME} PRIVATE efi-uefi-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE efi-to-kernel-i)
 
