--- a/projects/x86/memory/policy/code/CMakeLists.txt
+++ b/projects/x86/memory/policy/code/CMakeLists.txt
@@ -16,6 +16,7 @@ if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
     add_project("abstraction/memory/physical")
     add_project("abstraction/memory/virtual")
     add_project("abstraction/log")
+    add_project("abstraction/jmp")
     add_project("abstraction/text/converter")
     include("${REPO_PROJECTS}/print-configuration.cmake")
 endif()
@@ -30,6 +31,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-interrupts-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-management-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-manipulation-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-virtual-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-jmp-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE x86-i)
 
