wip before removing x86 stuff

--- a/projects/freestanding/code/memory/virtual/CMakeLists.txt
+++ b/projects/freestanding/code/memory/virtual/CMakeLists.txt
@@ -8,3 +8,4 @@ target_link_libraries(${PROJECT_NAME} PRIVATE shared-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE efi-to-kernel-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-jmp-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-virtual-i)
