jk, stilll needed to move some stuff

--- a/projects/freestanding/code/memory/physical/CMakeLists.txt
+++ b/projects/freestanding/code/memory/physical/CMakeLists.txt
@@ -9,3 +9,5 @@ target_link_libraries(${PROJECT_NAME} PRIVATE efi-to-kernel-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-jmp-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-interrupts-i)
+
+add_subdirectory(status)
