--- a/projects/freestanding/code/memory/policy/CMakeLists.txt
+++ b/projects/freestanding/code/memory/policy/CMakeLists.txt
@@ -10,3 +10,5 @@ target_link_libraries(${PROJECT_NAME} PRIVATE freestanding-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE efi-to-kernel-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-jmp-i)
+
+add_subdirectory(status)
