deleting no longer required stuff

--- a/projects/x86/memory/virtual/code/CMakeLists.txt
+++ b/projects/x86/memory/virtual/code/CMakeLists.txt
@@ -8,8 +8,10 @@ if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
     add_project("shared")
     add_project("x86")
     add_project("abstraction/memory/virtual")
-    add_project("abstraction/memory/physical")
+    add_project("freestanding")
+    add_project("efi-to-kernel")
     add_project("abstraction/memory/manipulation")
+    add_project("abstraction/jmp")
     add_project("abstraction/text/converter")
     add_project("abstraction/log")
     include("${REPO_PROJECTS}/print-configuration.cmake")
@@ -20,10 +22,14 @@ add_library(${PROJECT_NAME} OBJECT "src/virtual.c")
 add_includes_for_sublibrary()
 
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-manipulation-i)
-target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-physical-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-virtual-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-jmp-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE x86-i)
+
+target_link_libraries(${PROJECT_NAME} PRIVATE efi-to-kernel-i)
+
+target_link_libraries(${PROJECT_NAME} PRIVATE freestanding-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-i)
 
