all libraries compiling

--- a/projects/x86/memory/virtual/code/CMakeLists.txt
+++ b/projects/x86/memory/virtual/code/CMakeLists.txt
@@ -7,10 +7,11 @@ if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
     include("${REPO_PROJECTS}/setup.cmake")
     add_project("shared")
     add_project("x86")
-    add_project("abstraction/memory/virtual")
     add_project("freestanding")
     add_project("efi-to-kernel")
     add_project("abstraction/memory/manipulation")
+    add_project("abstraction/memory/physical")
+    add_project("abstraction/memory/virtual")
     add_project("abstraction/jmp")
     add_project("abstraction/text/converter")
     add_project("abstraction/log")
@@ -22,6 +23,7 @@ add_library(${PROJECT_NAME} OBJECT "src/virtual.c")
 add_includes_for_sublibrary()
 
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-manipulation-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-physical-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-virtual-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-jmp-i)
 
