kernel not done yet :(

--- a/projects/abstraction/memory/virtual/code/CMakeLists.txt
+++ b/projects/abstraction/memory/virtual/code/CMakeLists.txt
@@ -4,8 +4,8 @@ if(${ARCHITECTURE} STREQUAL "X86")
     add_project("x86")
     add_project("x86/memory/virtual")
     abstraction_add_sources(x86-memory-virtual)
-    abstraction_include_interface_library(x86-memory)
-    abstraction_add_sources(x86-memory)
+    abstraction_include_interface_library(x86-configuration)
+    abstraction_add_sources(x86-configuration)
 else()
     message(FATAL_ERROR "Could not find matching lib for ${PROJECT_NAME}")
 endif()
