--- a/projects/abstraction/memory/virtual/code/CMakeLists.txt
+++ b/projects/abstraction/memory/virtual/code/CMakeLists.txt
@@ -6,6 +6,8 @@ if(${ARCHITECTURE} STREQUAL "X86")
     abstraction_add_sources(x86-memory-virtual)
     abstraction_include_interface_library(x86-configuration)
     abstraction_add_sources(x86-configuration)
+    abstraction_include_interface_library(x86-memory)
+    abstraction_add_sources(x86-memory)
 else()
     message(FATAL_ERROR "Could not find matching lib for ${PROJECT_NAME}")
 endif()
