--- a/projects/shared/code/memory/CMakeLists.txt
+++ b/projects/shared/code/memory/CMakeLists.txt
@@ -2,3 +2,6 @@ add_subdirectory(converter)
 add_subdirectory(allocator)
 add_subdirectory(management)
 add_subdirectory(sizes)
+add_subdirectory(physical)
+add_subdirectory(virtual)
+add_subdirectory(policy)
