--- a/projects/os-loader/code/CMakeLists.txt
+++ b/projects/os-loader/code/CMakeLists.txt
@@ -8,6 +8,7 @@ add_project("efi")
 add_project("efi/uefi")
 add_project("efi-to-kernel")
 add_project("abstraction/efi")
+add_project("abstraction/interrupts")
 add_project("abstraction/memory/manipulation")
 add_project("abstraction/memory/physical")
 add_project("abstraction/memory/virtual")
@@ -19,6 +20,7 @@ include("${REPO_PROJECTS}/print-configuration.cmake")
 add_executable(${PROJECT_NAME} "src/main.c" "src/data-reading.c" "src/memory.c")
 
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-efi)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-interrupts)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-jmp)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-manipulation)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-physical)
