problems with ABI feels bad

--- a/projects/efi-to-kernel/code/CMakeLists.txt
+++ b/projects/efi-to-kernel/code/CMakeLists.txt
@@ -4,6 +4,7 @@ project(efi-to-kernel-i LANGUAGES C ASM)
 if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
     include("${REPO_PROJECTS}/setup.cmake")
     add_project("shared")
+    add_project("abstraction/jmp")
     include("${REPO_PROJECTS}/print-configuration.cmake")
 endif()
 
@@ -14,6 +15,7 @@ target_include_directories(
 )
 
 target_link_libraries(${PROJECT_NAME} INTERFACE shared-i)
+target_link_libraries(${PROJECT_NAME} INTERFACE abstraction-jmp-i)
 
 if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
     fetch_and_write_project_targets()
