--- a/projects/abstraction/CMakeLists.txt
+++ b/projects/abstraction/CMakeLists.txt
@@ -13,6 +13,7 @@ add_subdirectory("interrupts/code")
 add_subdirectory("log/code")
 
 add_subdirectory("jmp/code")
+add_subdirectory("time/code")
 
 add_subdirectory("memory/manipulation/code")
 add_subdirectory("memory/virtual/code")
