--- a/projects/x86/efi/code/CMakeLists.txt
+++ b/projects/x86/efi/code/CMakeLists.txt
@@ -13,6 +13,7 @@ if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
     add_project("efi-to-kernel")
     add_project("abstraction/log")
     add_project("abstraction/jmp")
+    add_project("abstraction/time")
     add_project("abstraction/memory/manipulation")
     add_project("abstraction/memory/physical")
     add_project("abstraction/text/converter")
@@ -34,6 +35,7 @@ add_includes_for_sublibrary()
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-efi-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-jmp-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-log-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-time-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-text-converter-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-manipulation-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-physical-i)
