--- a/projects/kernel/code/CMakeLists.txt
+++ b/projects/kernel/code/CMakeLists.txt
@@ -19,6 +19,8 @@ add_project("abstraction/jmp")
 add_project("abstraction/log")
 add_project("abstraction/text/converter")
 add_project("abstraction/interrupts")
+add_project("abstraction/time")
+add_project("abstraction/kernel")
 add_project("abstraction/memory/manipulation")
 add_project("abstraction/memory/physical")
 add_project("abstraction/memory/virtual")
@@ -45,6 +47,8 @@ target_link_libraries(${PROJECT_NAME} PRIVATE efi-to-kernel-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-virtual-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-physical-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-interrupts)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-kernel)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-time)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-jmp)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-log)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-text-converter)
