work on dynamic arrays etc.

--- a/projects/x86/code/idt/real/CMakeLists.txt
+++ b/projects/x86/code/idt/real/CMakeLists.txt
@@ -5,6 +5,8 @@ add_includes_for_sublibrary()
 
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-interrupts-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-manipulation-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-log-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-text-converter-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE x86-i)
 
