move x86/memory/virtual

--- a/projects/x86/code/CMakeLists.txt
+++ b/projects/x86/code/CMakeLists.txt
@@ -7,6 +7,7 @@ if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
     include("${REPO_PROJECTS}/setup.cmake")
     add_project("shared")
     add_project("abstraction/memory/manipulation")
+    add_project("abstraction/memory/physical")
     add_project("abstraction/log")
     add_project("abstraction/jmp")
     add_project("abstraction/time")
