--- a/projects/x86/code/memory/CMakeLists.txt
+++ b/projects/x86/code/memory/CMakeLists.txt
@@ -8,3 +8,5 @@ target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-manipulation-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE x86-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-i)
+
+add_subdirectory(virtual)
