some rudimentary dynamic arrays

--- a/projects/abstraction/memory/physical/code/CMakeLists.txt
+++ b/projects/abstraction/memory/physical/code/CMakeLists.txt
@@ -3,13 +3,11 @@ create_abstraction_targets(abstraction-memory-physical)
 if(${ENVIRONMENT} STREQUAL "EFI")
     add_project("efi")
     abstraction_add_sources(efi-memory)
-elseif(
-    ${ENVIRONMENT} STREQUAL "FREESTANDING"
-    OR ${ENVIRONMENT} STREQUAL "POSIX"
-)
-    add_project("shared")
-    abstraction_add_sources(shared-memory-physical)
-    abstraction_add_sources(shared-memory-physical-status)
+elseif(${ENVIRONMENT} STREQUAL "FREESTANDING")
+    add_project("freestanding")
+    abstraction_add_sources(freestanding-memory-management)
+elseif(${ENVIRONMENT} STREQUAL "POSIX")
+    message(FATAL_ERROR "Could not find matching lib for posix ${PROJECT_NAME}")
 else()
     message(FATAL_ERROR "Could not find matching lib for ${PROJECT_NAME}")
 endif()
