--- a/projects/os-loader/code/CMakeLists.txt
+++ b/projects/os-loader/code/CMakeLists.txt
@@ -35,6 +35,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE shared-text)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-maths)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-uuid)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-memory-converter)
+target_link_libraries(${PROJECT_NAME} PRIVATE shared-memory-management)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-memory-allocator)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-trees-red-black)
 
