--- a/projects/x86/code/CMakeLists.txt
+++ b/projects/x86/code/CMakeLists.txt
@@ -6,8 +6,10 @@ add_library(${AGGREGATED_INTERFACE} INTERFACE)
 if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
     include("${REPO_PROJECTS}/setup.cmake")
     add_project("shared")
+    add_project("efi-to-kernel")
     add_project("abstraction/memory/manipulation")
     add_project("abstraction/memory/physical")
+    add_project("abstraction/memory/virtual")
     add_project("abstraction/log")
     add_project("abstraction/jmp")
     add_project("abstraction/time")
