--- a/projects/x86/code/idt/real/CMakeLists.txt
+++ b/projects/x86/code/idt/real/CMakeLists.txt
@@ -5,8 +5,11 @@ add_includes_for_sublibrary()
 
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-interrupts-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-manipulation-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-virtual-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-log-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-text-converter-i)
+
+target_link_libraries(${PROJECT_NAME} PRIVATE efi-to-kernel-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE x86-i)
 
