slight detour, making arch agnostic kernel params

--- a/projects/kernel/code/CMakeLists.txt
+++ b/projects/kernel/code/CMakeLists.txt
@@ -16,6 +16,7 @@ add_project("shared")
 add_project("efi-to-kernel")
 add_project("freestanding")
 add_project("abstraction/jmp")
+add_project("abstraction/efi")
 add_project("abstraction/log")
 add_project("abstraction/text/converter")
 add_project("abstraction/interrupts")
@@ -46,6 +47,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE efi-to-kernel-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-virtual-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-physical-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-efi-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-interrupts)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-kernel)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-time)
