--- a/projects/abstraction/efi/code/CMakeLists.txt
+++ b/projects/abstraction/efi/code/CMakeLists.txt
@@ -4,10 +4,12 @@ add_project("shared")
 
 if(${ARCHITECTURE} STREQUAL "X86")
     add_project("x86")
-    add_project("x86/efi")
-    abstraction_add_sources(x86-efi)
     abstraction_add_sources(x86-gdt)
     abstraction_add_sources(x86-configuration)
+    add_project("x86/efi")
+    abstraction_add_sources(x86-efi)
+    add_project("x86/efi-to-kernel")
+    abstraction_include_interface_library(x86-efi-to-kernel-i)
 else()
     message(FATAL_ERROR "Could not match ARCHITECTURE variable")
 endif()
