--- a/projects/abstraction/efi/code/CMakeLists.txt
+++ b/projects/abstraction/efi/code/CMakeLists.txt
@@ -1,6 +1,7 @@
 create_abstraction_targets(abstraction-efi)
 
 add_project("shared")
+add_project("efi-to-kernel")
 
 if(${ARCHITECTURE} STREQUAL "X86")
     add_project("x86")
