add serial logging

--- a/projects/kernel/code/CMakeLists.txt
+++ b/projects/kernel/code/CMakeLists.txt
@@ -21,6 +21,7 @@ add_project("abstraction/log")
 add_project("abstraction/text/converter")
 add_project("abstraction/interrupts")
 add_project("abstraction/time")
+add_project("abstraction/serial")
 add_project("abstraction/kernel")
 add_project("abstraction/memory/manipulation")
 add_project("abstraction/memory/physical")
@@ -54,6 +55,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-time)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-jmp)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-log)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-text-converter)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-serial)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-manipulation)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-virtual)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-physical)
