--- a/projects/x86/code/CMakeLists.txt
+++ b/projects/x86/code/CMakeLists.txt
@@ -10,6 +10,7 @@ if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
     add_project("abstraction/memory/manipulation")
     add_project("abstraction/memory/physical")
     add_project("abstraction/memory/virtual")
+    add_project("abstraction/serial")
     add_project("abstraction/log")
     add_project("abstraction/jmp")
     add_project("abstraction/time")
@@ -19,6 +20,7 @@ if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
 endif()
 
 add_subdirectory(configuration)
+add_subdirectory(serial)
 add_subdirectory(memory)
 add_subdirectory(fault)
 add_subdirectory(idt)
