before adding realloc version

--- a/projects/kernel/code/CMakeLists.txt
+++ b/projects/kernel/code/CMakeLists.txt
@@ -70,6 +70,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE freestanding-peripheral-screen)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-text)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-maths)
+target_link_libraries(${PROJECT_NAME} PRIVATE shared-prng)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-log)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-trees-red-black)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-memory-allocator)
