--- a/projects/shared/code/CMakeLists.txt
+++ b/projects/shared/code/CMakeLists.txt
@@ -23,6 +23,7 @@ add_subdirectory(memory)
 add_subdirectory(log)
 add_subdirectory(maths)
 add_subdirectory(buffer)
+add_subdirectory(prng)
 add_subdirectory(trees)
 add_subdirectory(uuid)
 add_subdirectory(hash)
