should be the fix

--- a/projects/efi/code/firmware/CMakeLists.txt
+++ b/projects/efi/code/firmware/CMakeLists.txt
@@ -3,6 +3,11 @@ add_library(${PROJECT_NAME} INTERFACE)
 
 add_includes_for_sublibrary()
 
+target_link_libraries(
+    ${PROJECT_NAME}
+    INTERFACE abstraction-memory-manipulation-i
+)
+
 target_link_libraries(${PROJECT_NAME} INTERFACE shared-i)
 
 target_link_libraries(${PROJECT_NAME} INTERFACE efi-i)
