--- a/projects/efi/code/globals/CMakeLists.txt
+++ b/projects/efi/code/globals/CMakeLists.txt
@@ -3,6 +3,8 @@ add_library(${PROJECT_NAME} OBJECT "src/globals.c")
 
 add_includes_for_sublibrary()
 
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-manipulation-i)
+
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE efi-to-kernel-i)
