--- a/projects/x86/efi/code/CMakeLists.txt
+++ b/projects/x86/efi/code/CMakeLists.txt
@@ -15,6 +15,7 @@ if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
     add_project("abstraction/time")
     add_project("abstraction/memory/manipulation")
     add_project("abstraction/memory/physical")
+    add_project("abstraction/memory/virtual")
     add_project("abstraction/text/converter")
     add_project("abstraction/efi")
     include(${REPO_PROJECTS}/print-configuration.cmake)
@@ -38,6 +39,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-time-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-text-converter-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-manipulation-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-physical-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-virtual-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-i)
 
