get rid of abstraction/memory/physical

--- a/projects/abstraction/memory/virtual/code/CMakeLists.txt
+++ b/projects/abstraction/memory/virtual/code/CMakeLists.txt
@@ -10,3 +10,15 @@ if(${ARCHITECTURE} STREQUAL "X86")
 else()
     message(FATAL_ERROR "Could not find matching lib for ${PROJECT_NAME}")
 endif()
+
+if(${ENVIRONMENT} STREQUAL "EFI")
+    add_project("efi")
+    abstraction_add_sources(efi-memory)
+elseif(${ENVIRONMENT} STREQUAL "FREESTANDING")
+    add_project("freestanding")
+    abstraction_add_sources(freestanding-memory-virtual)
+elseif(${ENVIRONMENT} STREQUAL "POSIX")
+    # Should not need an implementation
+else()
+    message(FATAL_ERROR "Could not find matching lib for ${PROJECT_NAME}")
+endif()
