work on improving freelists in memory managers

--- a/projects/efi-to-kernel/code/CMakeLists.txt
+++ b/projects/efi-to-kernel/code/CMakeLists.txt
@@ -1,21 +1,23 @@
 cmake_minimum_required(VERSION 3.22)
-project(efi-to-kernel-i LANGUAGES C ASM)
+set(CMAKE_TRY_COMPILE_TARGET_TYPE STATIC_LIBRARY)
+project(efi-to-kernel LANGUAGES C ASM)
+set(AGGREGATED_INTERFACE "${PROJECT_NAME}-i")
+add_library(${AGGREGATED_INTERFACE} INTERFACE)
 
 if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
-    include("${REPO_PROJECTS}/setup.cmake")
+    include(${REPO_PROJECTS}/setup.cmake)
     add_project("shared")
     add_project("abstraction/jmp")
-    include("${REPO_PROJECTS}/print-configuration.cmake")
+    include(${REPO_PROJECTS}/print-configuration.cmake)
 endif()
 
-add_library(${PROJECT_NAME} INTERFACE)
-target_include_directories(
-    ${PROJECT_NAME}
-    INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include
-)
+add_library(${PROJECT_NAME} OBJECT "src/kernel-parameters.c")
 
-target_link_libraries(${PROJECT_NAME} INTERFACE shared-i)
-target_link_libraries(${PROJECT_NAME} INTERFACE abstraction-jmp-i)
+add_includes_for_sublibrary()
+
+target_link_libraries(${PROJECT_NAME} PRIVATE shared-i)
+
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-jmp-i)
 
 if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
     fetch_and_write_project_targets()
