--- a/projects/freestanding/code/memory/virtual/CMakeLists.txt
+++ b/projects/freestanding/code/memory/virtual/CMakeLists.txt
@@ -7,6 +7,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE shared-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-virtual-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-manipulation-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-jmp-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-interrupts-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE efi-to-kernel-i)
