remove mock idt implemetnaito

--- a/projects/abstraction/interrupts/code/CMakeLists.txt
+++ b/projects/abstraction/interrupts/code/CMakeLists.txt
@@ -8,7 +8,7 @@ if(${ARCHITECTURE} STREQUAL "X86")
     elseif(${ENVIRONMENT} STREQUAL "EFI")
         abstraction_add_sources(x86-idt-real)
     elseif(${ENVIRONMENT} STREQUAL "POSIX")
-        abstraction_add_sources(x86-idt-mock)
+        message(FATAL_ERROR "No implementation of interrupts idt in posix")
     else()
         message(FATAL_ERROR "Could not match ENVIRONMENT variable")
     endif()
