--- a/projects/x86/code/idt/CMakeLists.txt
+++ b/projects/x86/code/idt/CMakeLists.txt
@@ -1,14 +1,17 @@
 project(x86-idt LANGUAGES C ASM)
-add_library(${PROJECT_NAME} OBJECT "src/trigger.c")
+add_library(${PROJECT_NAME} OBJECT "src/trigger.c" "src/idt.c" "src/idt.S")
 
 add_includes_for_sublibrary()
 
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-interrupts-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-log-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-text-converter-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-virtual-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-manipulation-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-jmp-i)
+
+target_link_libraries(${PROJECT_NAME} PRIVATE efi-to-kernel-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE x86-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-i)
-
-add_subdirectory(real)
-add_subdirectory(mock)
