--- a/projects/shared/code/memory/CMakeLists.txt
+++ b/projects/shared/code/memory/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(converter)
 add_subdirectory(allocator)
 add_subdirectory(management)
+add_subdirectory(page)
 add_subdirectory(sizes)
 add_subdirectory(policy)
